; ModuleID = '/home/carl/AnghaBench/http-parser/extr_bench.c_main.c'
source_filename = "/home/carl/AnghaBench/http-parser/extr_bench.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kBytes = common dso_local global i32 0, align 4
@data_len = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [9 x i8] c"infinite\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %7 = load i32, i32* @kBytes, align 4
  %8 = load i64, i64* @data_len, align 8
  %9 = trunc i64 %8 to i32
  %10 = sdiv i32 %7, %9
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* %4, align 4
  %12 = icmp eq i32 %11, 2
  br i1 %12, label %13, label %23

13:                                               ; preds = %2
  %14 = load i8**, i8*** %5, align 8
  %15 = getelementptr inbounds i8*, i8** %14, i64 1
  %16 = load i8*, i8** %15, align 8
  %17 = call i64 @strcmp(i8* %16, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %18 = icmp eq i64 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %13
  br label %20

20:                                               ; preds = %20, %19
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @bench(i32 %21, i32 1)
  br label %20

23:                                               ; preds = %13, %2
  %24 = load i32, i32* %6, align 4
  %25 = call i32 @bench(i32 %24, i32 0)
  ret i32 %25
}

declare dso_local i64 @strcmp(i8*, i8*) #1

declare dso_local i32 @bench(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
